def routes city
